--- a/ejemplos/src/app/app.component.html
+++ b/ejemplos/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-parrafo-menguante></app-parrafo-menguante>
-
+<!--
+  <app-parrafo-menguante></app-parrafo-menguante>
+-->
+<app-cabecera-parrafo-imagen></app-cabecera-parrafo-imagen>
