--- a/ejemplos/src/app/cabecera-parrafo-imagen/cabecera-parrafo-imagen.component.html
+++ b/ejemplos/src/app/cabecera-parrafo-imagen/cabecera-parrafo-imagen.component.html
@@ -1,4 +1,18 @@
-<p [@animacionAchica]='estado' (click)="achica()">
+<div class="menu">
+  <ul>
+    <li (click)="seleccionaElemento('cabecera')">Cabecera</li>
+    <li (click)="seleccionaElemento('imagen')">Imagen</li>
+    <li (click)="seleccionaElemento('parrafo')">Parrafo</li>
+    <li>Tamaño</li>
+    <li>Rotación</li>
+  </ul>
+</div>
+
+<h1 [@animacion]='estadoCabecera'>Lorem fistrum angularrrr</h1>
+
+<img src="assets/cat.jpg" alt="">
+
+<p [@animacion]='estadoParrafo'>
   Lorem fistrum te voy a borrar el cerito al ataquerl a gramenawer al ataquerl
   me cago en tus muelas. Me cago en tus muelas hasta luego Lucas llevame al
   sircoo a wan la caidita. Ese hombree benemeritaar no puedor caballo blanco
