--- a/ejemplos/src/app/cabecera-parrafo-imagen/cabecera-parrafo-imagen.component.css
+++ b/ejemplos/src/app/cabecera-parrafo-imagen/cabecera-parrafo-imagen.component.css
@@ -4,6 +4,17 @@
   justify-content: space-around;
 }
 
+.contenido {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+p {
+  width: 80%;
+  text-align: justify;
+}
+
 ul {
   display: flex;
   list-style-type: none;
@@ -18,4 +29,11 @@ li {
 
 li:hover {
   cursor: pointer;
+  background-color: red;
+  transition: 1000ms;
+}
+
+.seleccionado {
+  background-color: orange;
+  transition: 600ms;
 }
