Actualizando presentación y ejemplos.

--- a/ejemplos/src/app/app.component.html
+++ b/ejemplos/src/app/app.component.html
@@ -1,4 +1,6 @@
 <!--
-  <app-parrafo-menguante></app-parrafo-menguante>
--->
+<app-parrafo-menguante></app-parrafo-menguante>
 <app-cabecera-parrafo-imagen></app-cabecera-parrafo-imagen>
+
+-->
+<app-keyframes></app-keyframes>
