--- a/ejemplos/src/app/app.component.html
+++ b/ejemplos/src/app/app.component.html
@@ -1,6 +1,10 @@
 <!--
+
 <app-parrafo-menguante></app-parrafo-menguante>
+
 <app-cabecera-parrafo-imagen></app-cabecera-parrafo-imagen>
 
--->
 <app-keyframes></app-keyframes>
+-->
+
+<app-stagger></app-stagger>
