--- a/ejemplos/src/styles.css
+++ b/ejemplos/src/styles.css
@@ -1,7 +1,8 @@
 body {
   margin: 0px;
   padding: 0px;
-  background-color: white;
+  background-color: black;
   font-family: Helvetica, Arial, sans-serif;
+  color: lightgray;
   font-size: 12px;
 }
